<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zewa LS</string>
    <string name="hello_world">Hello world!</string>
     <string name="app_version">1.3.0</string>
    <string name="action_settings">Settings</string>
    
   <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="message_empty_layout_changes">Add an barcode above to get started.</string>
    <string name="message_empty_unconnect">Click on the Connect button to get started.</string>
    
     <string name="action_add_item">Add Product Barcode</string>
     <string name="action_search_progress_item">Search Progress</string>
     <string name="action_search_item">Search Bluetooth Device</string>
    <string name="action_remove_item">Remove item</string>
    <string name="preferenceScreen_title">Set scanning conditions</string>
    <string name="listPreference_title">Broadcast Type</string>
    <string name="listPreference_dialogTitle">Choose Broadcast Type</string>
    <string name="multiSelectListPreference_title">Device Type</string>
    <string name="multiSelectListPreference_dialogTitle">Choose Device Type</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Device User</item>
        <item >Scan Filter</item>
        <item >Alarm Clock</item>
        <item >Scan Barcode</item>
        <item >Search Device</item>
        <item >Measured Device</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_user_info</item>
        <item>@drawable/ic_scan_filter</item>
        <item>@drawable/ic_alarm_clock</item>
        <item>@drawable/lifesense_device_qr_icon</item>
        <item>@drawable/lifesense_device_bluetooth</item>
        <item>@drawable/ic_device_list</item>
    </array>
    
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Stop Search</string>
     <string name="not_available">n/a</string>
     <string name="not_available_value">" - "</string>
     <string name="scanner_subtitle_bonded">Pairing Mode:</string>
    <string name="scanner_subtitle__not_bonded">Normal Mode:</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>

    <string name="action_home">Home</string>
	<string name="action_connect">Connect</string>
	<string name="action_clear_item">Clear</string>
	<string name="switch_text_start">start</string>
	<string name="switch_text_stop">stop</string>
	<string name="action_save_alarm_clock_item">Save Alarm Clock</string>
	<string name="action_save_user_info_item">Save User Info</string>
	<string name="action_add_device_item">Add Device</string>
	<string name="message_no_measured_device">There is no measuring device</string>
	<string name="action_set_scan_filter_item">Set Scan Filter</string>
	<string name="message_default_search">No scan filter,scan all device\'s all broadcast</string>
    <string name="button_remove">Remove</string>
    <string name="button_cancel">Cancel</string>
    <string name="select_device_to_remove">Select Device to remove.</string>
    <string name="confirm_device_to_remove">Confirm Device Removal.</string>
    <string name="action_settings_restart">Restart app.</string>

	<!-- Dialog delete prompt message -->
	<string name="message_delete_prompt">Do you really want to delete it?</string>
	<string name="message_no_measured_data">There is no measurement data</string>
	
	<string name="action_show_version_item">Current Version</string>

    <string name="action_settings_remove_BP">Remove BPM&#8230;</string>
    <string name="action_settings_scan_BP">Scan for New BPM</string>
    <string name="action_settings_remove_WT">Remove Weight Scale&#8230;</string>
    <string name="action_settings_scan_WT">Scan for New Weight Scale</string>
    <string name="action_settings_remove_AT">Remove Pedometer&#8230;</string>
    <string name="action_settings_scan_AT">Scan for New Pedometer</string>
    <string name="action_settings_scanning">Scanning&#8230;</string>
    <string name="action_settings_bt">BT Settings</string>
    <string name="action_settings_about">About</string>
    <string name="permission_required">Permission Required.</string>
    <string name="permission_reason_scan">In order to discover your MedWell device, we need to scan for it.  This requires the permission to access your location.  Please grant the permission for this app to access location next time you are prompted.</string>
    <string name="permission_reason_state">In order to read the IMEI we need access to your phone state.</string>
    <string name="permission_reason_read_files">In order to read the tablet specific Settings we need access to your file system.</string>
    <string name="status_no_devices">No Devices\nConfigured</string>
    <string name="model_weight_scale">Weight Scale</string>
    <string name="model_pedometer">Pedometer</string>
    <string name="model_bpm">BPM</string>

    <!-- Device Setting Dialog Title -->
    <string name="title_app_permission">Set App Permission</string>
    <string name="title_alarm_clock">Set Alarm Clock</string>
    <string name="title_event_clock">Set Event Clock</string>
    <string name="title_sedentary">Set Sedentary Remind</string>
    <string name="title_night_mode">Set Night Mode</string>
    <string name="title_screen_mode">Set Screen Mode</string>
    <string name="title_wearing_mode">Set Wearing Mode</string>
    <string name="title_hr_detect_mode">Set Heart Rate Detect Mode</string>
    <string name="title_weather">Set Weather</string>
    <string name="title_distance_unit">Set Distance Unit</string>
    <string name="title_time_format">Set Time Format</string>
    <string name="title_auto_discern">Set Auto Discern</string>
    <string name="title_hr_warning">Set Heart Rate Warning</string>
    <string name="title_behavior_remind">Set Behavior Remind</string>
    <string name="title_target">Set Encourage Target</string>
    <string name="title_custom_pages">Set Custom Pages</string>
    <string name="title_dialpeace">Set Dialpeace Mode</string>
    <string name="title_error_parameter">Invalid parameter</string>
    <string name="title_message_remind">Set Message Remind</string>
    <string name="title_test_message_remind">Test Message Remind</string>
    <string name="title_test_incoming_call_remind">Test Incoming Call Remind</string>
    <string name="title_set_user_info">Set User Info</string>
    <string name="title_input_random_number">Input Random Number</string>
    <string name="title_set_health_score">Set Health Score</string>
    <string name="title_test_photographing">Send Photographing Command</string>
    <string name="title_test_positioning">Send Positioning Command</string>
    <string name="title_device_function">Set Device Function Status</string>
    <string name="title_gps_status">Set Gps Status</string>
    <string name="title_mood_reminder">Set Moodbeam Remid</string>
    <string name="title_scan_filter">Set Scan Filter</string>

    <!-- Dialog Label -->
    <string name="label_start_time">Start Time</string>
    <string name="label_end_time">End Time</string>
    <string name="label_clock">Clock Title</string>
    <string name="label_switch">Switch Status</string>
    <string name="label_clock_time">Clock Time</string>
    <string name="label_clock_index">Clock Index</string>
    <string name="label_sedentary_time">Sedentary Time</string>
    <string name="label_target_type">Target Type</string>
    <string name="label_target_value">Target Value</string>
    <string name="label_please_enter">please enter</string>
    <string name="label_min_heart_rate">Min Heart Rate</string>
    <string name="label_max_heart_rate">Max Heart Rate</string>
    <string name="label_message_type">Message Type</string>
    <string name="label_message_title">Message Title</string>
    <string name="label_message_content">Message Content</string>
    <string name="label_incoming_call">Incoming Call</string>
    <string name="label_user_name">Name</string>
    <string name="label_user_number">Number</string>
    <string name="label_user_gender">Gender</string>
    <string name="label_user_height">Height(unit:M)</string>
    <string name="label_user_weight">Weight(unit:kg)</string>
    <string name="label_user_age">Age</string>
    <string name="label_athlete_level">Athlete Level</string>
    <string name="label_random_number">Random Number</string>
    <string name="label_health_score">Health Info</string>
    <string name="label_photographing_state">Photographing State</string>
    <string name="label_reminder_interval">Reminder Interval(minute)</string>
    <string name="label_reminder_type">Reminder Type</string>
    <string name="label_function_type">Device Function</string>
    <string name="label_gps_status">GPS Status</string>
    <string name="label_vibration_interval">Vibration Interval(m)</string>
    <string name="label_vibration_time">Vibration Time(s)</string>
    <string name="label_filter_device_name">Device Name</string>
    <string name="label_filter_device_type">Device Type</string>
    <string name="label_filter_device_rssi">Device Rssi</string>

    <!-- Dialog Or Message status -->
    <string name="str_device_not_connected">Device is not connected!</string>
    <string name="str_random_number_error">Verification failed, please re-enter.</string>
    <string name="str_random_number_ok">Verification success.</string>
    <string name="str_pair_status_ok">Binding success.</string>
    <string name="str_pair_status_failed">Binding failed.</string>
    <string name="str_pair_status_timeout">Binding timeout.</string>
    <string name="str_verification_failed">Verification failed.</string>
    <string name="str_bluetooth_unavailiable">Bluetooth unavailiable.</string>
    <string name="str_battery_percentage">power:%@</string>

    <string name="setting_ok">Setting Success</string>
    <string name="setting_fail">Setting Failed</string>


</resources>
